--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,3 @@
-.component-body-container {
-    padding: 20px;
-}
-
-.custom-btn {
-    padding: 10px;
-    border: none;
-    margin-right: 10px;
-    text-transform: uppercase;
-    width: 80px;
-    font-size: 0.9rem;
-    cursor: pointer;
-    outline: none;
-}
-
-.add-btn {
-    background: #7ab97a;
-    color: #fff;
-}
-
 .grid-container {
     display: grid;
     grid-template-columns: 40% 30% auto;
@@ -31,14 +11,19 @@
 
 .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
-    font-size: 1.15rem;
+    font-size: 1.05rem;
     word-wrap: break-word;
     padding-right: 10px;
 }
 
 .name-heading, .phone-heading {
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 600;
     color: #808080;
     text-transform: uppercase;
+}
+.delete-btn {
+    background: #fa9c9c;
+    color: #000;
+    padding: 8px;
 }
